<resources>
    <string name="app_name">capstone1</string>
    <string name="heading">Please proceed and get the new experience of TechLaunch</string>
    <string name="username">username</string>
    <string name="text4">Enter your TechLauncher email to login</string>
    <string name="text6">Dont have an account?</string>
    <string name="password">TechLaunch Password</string>
    <string name="Conpass">Confirm Password</string>
    <string name="email">Email Address</string>
    <string name="text8">Have an Account?</string>
    <string name="text12">Recent Learning</string>
    <string name="text13">My Library</string>
    <string name="text14">Part of course learning</string>
    <string name="leaderboard_button">Open Leaderboard</string>
    <string name="default_web_client_id">128887566458-u5u00kjmp9uueepri7n8735mpfnopi9m.apps.googleusercontent.com</string>
    <string name="LeaderboardActivity">tangina</string>
    <string name="python_reviewer">Python Reviewer</string>
    <string name="back">Back</string>
    <string name="flashcard">Flashcard</string>
    <string name="progress_format">3/20</string>
    <string name="click_to_flip">Click to flip</string>
    <string name="click_to_flip_back">Click to flip back</string>
    <string name="previous_card">Previous Card</string>
    <string name="next_card">Next Card</string>
    <string name="shuffle_cards">Shuffle Cards</string>
    <string name="prepared_by_techlaunch">Prepared by TechLaunch just for you!</string>
    <string name="success_message">Great job! You fixed the code!</string>
    <string name="failure_message">Not quite right yet. Keep trying!</string>
    <string name="hint_button_description">Get a hint</string>
    <string name="run_code">Run Code</string>
    <string name="debug_instructions">Find and fix the bug in the code</string>
    <string name="expected_output">Expected Output:</string>
    <string name="your_output">Your Output:</string>
    <string name="view_all_assessments">View All</string>
    <string name="technical_assessment">Technical Assessment</string>
    <string name="fix_the_loop">Fix the Loop</string>
    <string name="debug_if_else">Debug If-Else Statement</string>
    <string name="points_earned">+%d points earned!</string>

    //sql compiler tho
    <string name="sql_compiler_title">SQL Compiler</string>
    <string name="query_hint">Write your SQL query here...</string>
    <string name="run_query">Run</string>
    <string name="test_case">Test Case</string>
    <string name="correct_output">✅ Correct Output! 🎉</string>
    <string name="incorrect_output">❌ Incorrect Output</string>
    <string name="query_error">❌ Query Error: %s</string>
    <string name="reset">Reset</string>
    <string name="view_solution">View Solution</string>
    <string name="sample_table">Sample Table: `%s`</string>


    <string name="sharpen_description">
        After completing your first COURSE, you will eligible to participate in leaderboard.</string>
    <string name="sharpen_description2">Take Quizzes to earn points!</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
</resources>
